# ChangeLog for mail-filter/opendkim
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/mail-filter/cvs-repo/gentoo-x86/mail-filter/opendkim/ChangeLog,v 1.42 2012/07/13 06:17:44 eras Exp $

*opendkim-2.6.4 (13 Jul 2012)

  13 Jul 2012; Eray Aslan <eras@gentoo.org> +opendkim-2.6.4.ebuild:
  Version bump

*opendkim-2.6.3 (12 Jul 2012)

  12 Jul 2012; Eray Aslan <eras@gentoo.org> -opendkim-2.4.2.ebuild,
  -opendkim-2.5.1.ebuild, -opendkim-2.5.2.ebuild, +opendkim-2.6.3.ebuild:
  Version bump and remove old

  04 Jul 2012; Jeff Horelick <jdhore@gentoo.org> opendkim-2.5.2-r1.ebuild:
  marked x86 per bug 420663

*opendkim-2.6.1 (27 Jun 2012)

  27 Jun 2012; Eray Aslan <eras@gentoo.org> +opendkim-2.6.1.ebuild:
  version bump

  11 Jun 2012; Agostino Sarubbo <ago@gentoo.org> opendkim-2.5.2-r1.ebuild:
  Stable for amd64, wrt bug #420663

*opendkim-2.6.0 (11 Jun 2012)

  11 Jun 2012; Eray Aslan <eras@gentoo.org> +opendkim-2.6.0.ebuild:
  version bump

  04 Jun 2012; Zac Medico <zmedico@gentoo.org> opendkim-2.4.2.ebuild,
  opendkim-2.4.3.ebuild, opendkim-2.5.1.ebuild, opendkim-2.5.2-r1.ebuild,
  opendkim-2.5.2.ebuild:
  inherit user for enewgroup and enewuser

*opendkim-2.5.2-r1 (04 May 2012)

  04 May 2012; Eray Aslan <eras@gentoo.org> +opendkim-2.5.2-r1.ebuild:
  do not cache ldap query results

*opendkim-2.5.2 (10 Apr 2012)

  10 Apr 2012; Eray Aslan <eras@gentoo.org> +opendkim-2.5.2.ebuild:
  version bump

  24 Mar 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> opendkim-2.4.3.ebuild:
  x86 stable wrt bug #409019

  21 Mar 2012; Agostino Sarubbo <ago@gentoo.org> opendkim-2.4.3.ebuild:
  Stable for amd64, wrt bug #409019

*opendkim-2.5.1 (19 Mar 2012)

  19 Mar 2012; Eray Aslan <eras@gentoo.org> +opendkim-2.5.1.ebuild:
  version bump

*opendkim-2.4.3 (26 Dec 2011)

  26 Dec 2011; Eray Aslan <eras@gentoo.org> +opendkim-2.4.3.ebuild,
  metadata.xml:
  Version bump. Remove unused USE flag description.
