@@ -9,28 +9,30 @@ DIST opendkim-2.6.0.tar.gz 1127009 SHA256 1fd20a436af5005fb9870ec112315b98666422
 DIST opendkim-2.6.1.tar.gz 1125780 SHA256 a6cb55b1ae51cc6b37bfe09325c6e4c2309aabca0a447ea0baddbe8a159b25b6
 DIST opendkim-2.6.3.tar.gz 1127456 SHA256 6208d1bdf3e754cd26e3c9dd95ed68f00f9236e471242c176f2a6a61ede37216 SHA512 a9cbbac94cf23b613adb19e2fb38bda406d1874dd53be7ab0bae44860c284403ee33a1ca8b5aebe7964d0ea832169efa4c41c3ae93c37b8586904a0ecb431e19 WHIRLPOOL c12be4edbd42347d2e5e54d8073d948dbcbf84a15a3869ded14299baef08cd321487f2ea17f8d8e995e63fd0954a195c887046aca4e164f0a438417dabdc56ba
 DIST opendkim-2.6.4.tar.gz 1127508 SHA256 ff0c53eb93f21bca88f803668d32e127d884c83f850c159eb291898656dc622f SHA512 3706a75b259c96b9bd9efa7a79cb470bb5d3276d9080378ffe7dce771ae9e90797e5c6f5a24b89a1a23ff15cd379d6203938b2145ac0fc6a090e3a3fa708524f WHIRLPOOL 8a8ba93acfb82c676a528af35f2b70c05edb1a8f508ed9e5e855e8ab78941e8e757425610a3536a78c740a964893a79862252a83536989ff720b402e25c81318
+DIST opendkim-2.6.7.tar.gz 1129124 SHA256 45da209ccddfb6f6888ac2366b6e38a6460b36ff0da527aed910217cead6fc84 SHA512 f47f4c4805b96a2c57774dd69a7770751649397866b29392aa756c4b143579d93951166c817342fde12b8994251a8b44d2de61e6059fd04686e04aa6e668cdd3 WHIRLPOOL df662ca97ac937720038b16fb8b5e8f3f1d6a9d5b73102082a889abddaa003ca8ddf8fcba670fb16f7d00e4fd8b07fc0ddaff97f070e795822350751b0cb0608
 EBUILD opendkim-2.4.3.ebuild 6386 SHA256 5a997081adfa28ba728b2b1a9afc1b548094eef3265aaa5b5efb225b936fde67 SHA512 34b99a31e2b5a448f266cdab7fbf6f4f771b6441f49aacf13fe3b9ffce4e80b95bacab09d2f51bf2c91eb821f5f2cd8bd6a68bbef326fa91ad627632390862f4 WHIRLPOOL 1f6f918adf564bc3866ea7197be28c8be2c757b2b699c9c93a49b2bb7ed22d4c91d35e842a335a764025cba12698b72fb8dd7d1e516dcf8c47ed677e6109cf94
 EBUILD opendkim-2.5.2-r1.ebuild 6381 SHA256 fb66509fcc160db3cb5add3386e5d0ff40ed21e3d28d1405f330575c34f36a72 SHA512 6275ecedda76b28ab20de3ab9ec010f4529a9b0545a62c5298aa8c1f4759583c51a6ee64f8a624fd3aca8395a274ac153ec682d2c2ab6519427c401d4ece34ba WHIRLPOOL cd3ed8b5e46bb1e2073d9918cfbda16bdf92f98615607e9bcc80335b60bfd6dead5e3e7c4ec1473446d900b9845db6989e4c2c420427fa1c5741121b257cd594
 EBUILD opendkim-2.6.0.ebuild 6348 SHA256 16414fae7170e523be6a92cf2118a48296456f325ed57b0eefd164ae9d5a3444 SHA512 88f6393b58901d6b0f1acc4065ec67c264115c97e85628c6264831a929e3138a90d63eef0952cda4d950a8b51dd8f78b57517bdbd568440d5bf7ffb1dd7d5781 WHIRLPOOL 9ab00561df7c118c75b77a07bdf21c4ad85bf2a3d150fcda71a9ef50c9fbe92eac0a69ff51afae37676109e037b21cbcdcca6de077069b9ee7aadb6e26502172
 EBUILD opendkim-2.6.1.ebuild 6332 SHA256 2960caca3efcbfd1e791576aea7fbe591b32c1b518f6ea1a72f1cb69a60cec57 SHA512 6a89efc29d092682233f2079da9806b7ca2247bdaac9e37107d0c604b0131b6c63aaaff0090e7fd82fe7a071ffbb56667f43e535c3d25e9186912d3652615799 WHIRLPOOL 6a63ca377ead189d8f222c1d6c9c7bf79c5c586033d6a722231a7f8b9bbf8aa1aee01926fd234cba7741729bbca93388729a54e4847b6addb40679e79882d576
 EBUILD opendkim-2.6.3.ebuild 6332 SHA256 ec74fb29947fed50cf835bf848d184f6f902ef81741c00891ed598338523b837 SHA512 278a57502a8343948bd4a118fbe8092ab8cf703b7b28f0989105d2125273c3e1747301ace318de54e96a9ce1026085c7945fc760bde3f631e141bbf7a698faf6 WHIRLPOOL 6f9156e644207a540340e51fa72235eb20c5603b070c946c2d785393fe46aaffc1bb1498278a8f01fd5c6cebc2ae8fe9f9f2afcba862c3a6ce4dc879a0c373c7
 EBUILD opendkim-2.6.4.ebuild 6332 SHA256 6a789a58b78532698c1ac6351e9bd0404e000049a19ca330225dcd3aa79a5732 SHA512 7adb77946102c310aeb48f3a592b57ae165ee36c4793e3f0757e230160cba17569548bc39601ddc4273e8a86ae1919ae2f22230e105770f075ce33f7eee2d299 WHIRLPOOL ece4f43bc716d8768da704c19b293e8530a74111af9641ade1e6c1202b711ec76711a8b57396a60a0885203b312a7331d8f8ef8b623cf8285cc1c8e297068c2f
-MISC ChangeLog 7753 SHA256 d84088ca985de9ab07f8733ce885337c42b4466ad36e9b3ee126874f63ac21a1 SHA512 08d7aa756a406d9355771a4cd28b072706f3de18db9f1aa1e9a29bc589b131ff343c5599b169fb1f887883f926f27ae964636e57f9c0282043075233ea6752af WHIRLPOOL 1e6db2c5b355ac30323666f9cebf4eaf2a93da9d18e27fef70645cf2bb428a4546d619ecc3e1befeec262666cb110784ba70589a7cfc8025dfcce27e894d8f88
+EBUILD opendkim-2.6.7.ebuild 6332 SHA256 67455b4fca44a560cf226ef3a2814967e14cc210d2d15a378b48e842bf6172e0 SHA512 6134a4837b4b963425dc93403680e2022555fc158aac368b3de3753a367b299774b08c78ec373194d7fa86d5de5bde1c6d294f3735fc784df63038310a96b3dc WHIRLPOOL faa605f7bed9d139c78fed158c6e246a7450c9c7eba07d93929cabe4009ac6334adc42d4c6d93e7abc1c6300a04f037569416849543df5c2d0a4b656e5f49cfd
+MISC ChangeLog 7868 SHA256 5c0004901b8a61a035d5fd668de119a69c0695f6a9295dc26aa75d10227644ee SHA512 7a31e6508e4fbfdb1119a528c33114326a093aa5c947081847e92f150e7ff8f3910b119885b1a23c1d728f2fe364da8bb949cb13ac155ccc4518f030591a597a WHIRLPOOL a0c3f5f8758b8cd215d7fbc3910a399838c494791de162abbab4448f6c6cba0e9bc679ca6418f43bf6fe4d88767765d6d3611c15d6b68368550ed88651bd678d
 MISC metadata.xml 1325 SHA256 5c79e487583ffa41f2823235e61232f84c1ac18ef41b1b71150f8d32f76b82eb SHA512 ae25f27a0c0cc5c3460b150f3eb6369e34b3051984b58da6a81847b5e90edc62e91fdd8f0d428576ef73614db095dc3a415237cccc1cc3cc806f9d99ff588df5 WHIRLPOOL d8b1221d484e12c31d76a20e8a7e6e0d033e16884e7dd14f657d4383f24f8f9294bc51dea4f512896a4183f9299c2faef31e7540d95c418000245090a3a0cdfe
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBCAAGBQJP/72YAAoJEHfx8XVYajsfOgMQAIo4Zoe98KMs9jPsJiuD44+c
-y2fwEBhRz5988SG0cObg56pLtFV6zc72fv68oiCIkL1Ye4wkqDkXrT2LcjAog8Nf
-ErFQFkTUxaihEyXzU7qAAJUKF8LoKoa6Vn5/R/mTCHSiI92I7cvzocfptWxysyOD
-SB1JVi0gJIRNd2Tq92StJgZqxaUTuulXd1aPs5GWEeLzNopXKJePVKiYK7Fd/b9s
-TJaJ2FIe8bWpnNUodvREg/ZuOgVZt7ceQWWY3dpoptvT21XnLcLjEIfh4Vb7J25e
-7hFBmtOZO7S8vjN+ir33YW2xy3U1AIUJXhOJU1wmbjeeeiuy1giCADGaFA4PjvYy
-IQN/7JVKXsHEYAnGGrkTnwwi4MWnFHMFy/P4Ha84YziS69HSwvK5XJSVXyeu8gye
-YHiGsqej0c1kOfBnrJmii/GhcVz2LhDU+u8atDrKt0snTsHHDKPuxGFq4T8UpiUx
-0dq9520hv9V7jrC2bRYb5rVs172s7FIBW/m+hSfahblDq6+w2jbPn03cV8e1QjuG
-4JK8ze/XcUPW1G1TdvaaCo3wgyhUayghEPWhEbOS9JJOu//fRWGHp9bbKyyLk+Zz
-jWPJA3lKYxarWlwXU9Tlb2COF8n48s8QVa4Akhy01aD8/pAhHXNlpCJg8CeDCvzq
-n4Z1ngckDaQ3+083WgYD
-=jgzH
+iQIcBAEBCAAGBQJQDmWCAAoJEHfx8XVYajsfLRkQAIXR3tffSjPubAlaEgryd5cc
+SF2ZTSPsdRG1X2OPCQkM9FWfpSU1+kOEqIhk7qSqhkmZ/n/aXU6W45TwyZR2ArHP
+5C0WHhywyqdqzJUmlgoIExqRI8Fjx9veRudQKH0TwU4WXkjXjxZMgw7JD36ogvWH
+VaYE24Bk4tmOIEJpM/KkcVB+aHcx4bkYl5vILiddlsH0uwTa6cdBrwRm52VEXDXF
+vMszTLvH62v3B9hhNG4z5eyG6mZd8XWdJa3tyy5nbQ66h+VRjLlAu9+63aEMtrpp
+AkKlI0THcYCm3Caqpw2mOzpF2XfiX+phbWS+vPROflNouvPQhK3p91Nb8C8DJxwW
+HpcBEOpEWMTfZVCjpWU/9EtHc6AiNL1hw/xxbGIzN3kzj9HSGuwOrTxLj4RccWJ3
+5NYHhvaNfEId6tT9CpwDBGVUBgzlFjuszD7t9/7q3mKjVArx/glb7tbu9wbXPuyL
+XMElfOKYwhfKE+h87Snb4HX7GaqAf3C8aYDGf+ZHQpSJtEcP10f+5EqS6nj1dy+q
++7LLG0jAuoZVBHjVB4Zsdv4+1YnlALWZE5mP36em5jjNgfW25/MUgwTt+JljQdFO
+aerqaP3kx2CLEVYeyDheMo58naoloagIAS69DXhV2wI9dzcydsVVse1Kp/xNKahJ
+HXA/0kMleHkyDtOVbF3H
+=/8Eq
 -----END PGP SIGNATURE-----
