@@ -1,6 +1,11 @@
 # ChangeLog for mail-filter/opendkim
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/mail-filter/cvs-repo/gentoo-x86/mail-filter/opendkim/ChangeLog,v 1.42 2012/07/13 06:17:44 eras Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/mail-filter/cvs-repo/gentoo-x86/mail-filter/opendkim/ChangeLog,v 1.43 2012/07/24 09:06:04 eras Exp $
+
+*opendkim-2.6.7 (24 Jul 2012)
+
+  24 Jul 2012; Eray Aslan <eras@gentoo.org> +opendkim-2.6.7.ebuild:
+  Version bump
 
 *opendkim-2.6.4 (13 Jul 2012)
 
